tests/should_pass/test_externally_bound_variables.skj
fn my_external_monad() -> IO<i32> {
    let x: i32 = 20;
    let y: i32 = 40;
    return do() {
        return x + y;
    };
}


fn main() -> IO<i32> {
    return my_external_monad();
}
