tests/should_fail/test_heterogenous_array.skj
fn main() {
    let bad_array: i32[] = [1, 2, true, 3];
}